--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/新しいフォルダー (2).loader.js";
+      var loaderUrl = buildUrl + "/CatRunBuikd.loader.js";
       var config = {
-        dataUrl: buildUrl + "/新しいフォルダー (2).data",
-        frameworkUrl: buildUrl + "/新しいフォルダー (2).framework.js",
-        codeUrl: buildUrl + "/新しいフォルダー (2).wasm",
+        dataUrl: buildUrl + "/CatRunBuikd.data",
+        frameworkUrl: buildUrl + "/CatRunBuikd.framework.js",
+        codeUrl: buildUrl + "/CatRunBuikd.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "CatRun",
