--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/CatRunBuikd.loader.js";
       var config = {
-        dataUrl: buildUrl + "/CatRunBuikd.data",
-        frameworkUrl: buildUrl + "/CatRunBuikd.framework.js",
-        codeUrl: buildUrl + "/CatRunBuikd.wasm",
+        dataUrl: buildUrl + "/CatRunBuikd.data.gz",
+        frameworkUrl: buildUrl + "/CatRunBuikd.framework.js.gz",
+        codeUrl: buildUrl + "/CatRunBuikd.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "CatRun",
